# application/src/main/java/es/luis/canyoningApp/application/rest/mapper/CanyonControllerMapper.java
@@ -1,8 +1,10 @@
 package es.luis.canyoningApp.application.rest.mapper;
 
 import es.luis.canyoningApp.canyoningApp_application.rest.model.CanyonDto;
+import es.luis.canyoningApp.canyoningApp_application.rest.model.LocationCanyonDto;
 import es.luis.canyoningApp.canyoningApp_application.rest.model.SimpleCanyonDto;
 import es.luis.canyoningApp.domain.model.Canyon;
+import es.luis.canyoningApp.domain.model.LocationCanyon;
 import es.luis.canyoningApp.domain.model.SimpleCanyon;
 import org.mapstruct.Mapper;
 
@@ -14,4 +16,6 @@ public interface CanyonControllerMapper {
   CanyonDto canyonToCanyonDto(Canyon canyon);
 
   SimpleCanyonDto simpleCanyonToSimpleCanyon(SimpleCanyon canyons);
+
+  LocationCanyonDto locationCanyonToLocationCanyonDto(LocationCanyon locationCanyon);
 }
