# domain/src/main/java/es/luis/canyoningApp/domain/model/LocationCanyon.java
@@ -1,22 +1,19 @@
 package es.luis.canyoningApp.domain.model;
 
 import lombok.AllArgsConstructor;
+import lombok.Builder;
 import lombok.Data;
 import lombok.NoArgsConstructor;
-import lombok.experimental.SuperBuilder;
 
 @Data
-@SuperBuilder
+@Builder
 @NoArgsConstructor
 @AllArgsConstructor
-public class CanyonLocation {
+public class LocationCanyon {
+
   private Long canyonId;
-
-  private String population;
-
-  private String latitud;
-
+  private String name;
+  private String season;
   private String longitud;
-
-  private String zone;
+  private String latitud;
 }
