# domain/src/main/java/es/luis/canyoningApp/domain/service/CanyonService.java
@@ -1,7 +1,9 @@
 package es.luis.canyoningApp.domain.service;
 
 import es.luis.canyoningApp.domain.model.Canyon;
+import es.luis.canyoningApp.domain.model.LocationCanyon;
 import es.luis.canyoningApp.domain.model.SimpleCanyon;
+import java.util.List;
 import org.springframework.core.io.Resource;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
@@ -19,4 +21,6 @@ public interface CanyonService {
   Canyon updateCanyon(Long canyonId, Canyon canyon);
 
   Resource downloadCanyon(Long canyonId, Boolean email);
+
+  List<LocationCanyon> getLocations();
 }
