# infrastructure/src/main/java/es/luis/canyoningApp/infrastructure/entity/CanyonLocationEntity.java
@@ -11,19 +11,19 @@ import lombok.Data;
 @Table(name = "canyonlocation")
 public class CanyonLocationEntity {
 
-    @Id
-    @Column(name = "canyonId")
-    private Long canyonId;
+  @Id
+  @Column(name = "canyonId")
+  private Long canyonId;
 
-    @Column(name = "poblacion")
-    private String population;
+  @Column(name = "poblacion")
+  private String population;
 
-    @Column(name = "latitud")
-    private String latitude;
+  @Column(name = "latitud")
+  private String latitud;
 
-    @Column(name = "longitud")
-    private String longitude;
+  @Column(name = "longitud")
+  private String longitud;
 
-    @Column(name = "zona")
-    private String zone;
+  @Column(name = "zona")
+  private String zone;
 }
