# infrastructure/src/main/java/es/luis/canyoningApp/infrastructure/entity/SimpleCanyonEntity.java
@@ -1,10 +1,9 @@
 package es.luis.canyoningApp.infrastructure.entity;
 
 import jakarta.persistence.*;
+import java.time.OffsetDateTime;
 import lombok.Data;
 import org.hibernate.annotations.Where;
-
-import java.time.OffsetDateTime;
 
 @Data
 @Entity
@@ -12,46 +11,41 @@ import java.time.OffsetDateTime;
 @Where(clause = "deleteAt IS NULL")
 public class SimpleCanyonEntity {
 
-    @Id
-    @GeneratedValue(strategy = GenerationType.IDENTITY)
-    @Column(name = "canyonId", nullable = false, updatable = false)
-    private Long canyonId;
+  @Id
+  @GeneratedValue(strategy = GenerationType.IDENTITY)
+  @Column(name = "canyonId", nullable = false, updatable = false)
+  private Long canyonId;
 
-    @Column(name = "name")
-    private String name;
+  @Column(name = "name")
+  private String name;
 
-    @Column(name = "season")
-    private String season;
+  @Column(name = "season")
+  private String season;
 
-    @Column(name = "description")
-    private String description;
+  @Column(name = "description")
+  private String description;
 
-    @Column(name = "croquis")
-    private String croquis;
+  @Column(name = "croquis")
+  private String croquis;
 
-    @Column(name = "river")
-    private String river;
+  @Column(name = "river")
+  private String river;
 
-    // todo check if it works
-    @OneToOne(fetch = FetchType.EAGER, cascade = CascadeType.ALL)
-    @JoinColumn(name = "canyonId", referencedColumnName = "canyonId")
-    private CanyonLocationEntity location;
+  @Column(name = "access")
+  private String access;
 
-    @Column(name = "access")
-    private String access;
+  @Column(name = "approach")
+  private String approach;
 
-    @Column(name = "approach")
-    private String approach;
+  @Column(name = "descent")
+  private String descent;
 
-    @Column(name = "descent")
-    private String descent;
+  @Column(name = "_return")
+  private String _return;
 
-    @Column(name = "_return")
-    private String _return;
+  @Column(name = "scape")
+  private String scape;
 
-    @Column(name = "scape")
-    private String scape;
-
-    @Column(name = "deleteAt")
-    private OffsetDateTime deleteAt;
+  @Column(name = "deleteAt")
+  private OffsetDateTime deleteAt;
 }
